ViSP 2.4.x 
  - New Feature
	- ViSP as a third party library in an other project.
	  It is now possible to use ViSP as a third party project without
	  installing ViSP by make install. ViSP can now be used
	  directly from the build dir, or from the install dir, or
	  from a package (NSIS, ...)
	
----------------------------------------------	
ViSP 2.4.0 (released February 6, 2007)
  - New Feature
	- add new framegrabber interface for itifg8 driver from Coreco 
	  Imaging Technology (http://sourceforge.net/projects/itifg)
	  Tested with AM-STD COMP framegrabber board on 2.4 and 2.6
	  linux kernel (see vpItifg8Grabber). 
	- add new framegrabber interface and test for firewire 1394 
	  cameras using libdc1394-2.x. Need a newer version than 
	  libdc1394-2.0.0-rc4.
	  Tested with the svn version of libdc1394-2 and Marlin F033C and
          F131B cameras (see vp1394TwoGrabber). Format 7 is supported
	  in vp1394TwoGrabber.
	  vp1394Grabber will be obsolete soon.
  - Bug fix and improvement
	- tests and examples
	- Video For Linux Two grabber (see vpV4l2Grabber)
        - memory leaks suppression
	- works fully under windows
	- doxygen documentation
----------------------------------------------	
ViSP 2.2.0 (released August 25, 2006)
  - Build
	- To increase the code portability, especially under windows), 
	  all the build process is now based on CMake 
	  (see http://www.cmake.org).
	- Supported platforms:
	  Linux, Mac OSX, SunOS: g++ 2.95.3, 2.96, 3.3.x, 3.4.x, 4.1.0)
	  Windows: MSVC7 (2003.NET), MSVC8 (2005) 
	- Suppression of autotools support (configure)
	- Allows shared library building (.so and .dll)
  - New Feature
	- add control for Traclabs biclops pan-tilt head
	- add control for Directed Perception ptu-46 pan-tilt head
	- add vpDisplayGTK display under Windows
	- add vpDirectShowGrabber framegrabber under Windows
	- add vpDisplayGDI display under windows
  - Bug fix and improvement
	- vp1394Grabber settings (format, mode, framerate, shutter, gain)