@@ -1,6 +1,6 @@
 #############################################################################
 #
-# $Id: FindDIRECTSHOW.cmake,v 1.1 2006-06-19 09:05:32 fspindle Exp $
+# $Id: FindDIRECTSHOW.cmake,v 1.2 2007-02-13 09:17:41 fspindle Exp $
 #
 # Copyright (C) 1998-2006 Inria. All rights reserved.
 #
@@ -44,37 +44,37 @@
 SET(DIRECTSHOW_FOUND "NO")
 
 # DirectShow is only available on Windows platforms
-IF(WIN32)
+IF(WIN32 AND NOT MINGW)
   # Find DirectX Include Directory
   FIND_PATH(DIRECTX_INCLUDE_DIR ddraw.h
+    "C:/DXSDK/include"
     "C:/Program Files/Microsoft Visual Studio .NET 2003/Vc7/PlatformSDK/Include"
     "C:/Program Files/Microsoft DirectX SDK (February 2006)/Include"
     "C:/Program Files/Microsoft DirectX 9.0 SDK (June 2005)/Include"
-    "C:/DXSDK/Include"
     DOC "What is the path where the file ddraw.h can be found"
   )
 
   # if DirectX found, then find DirectShow include directory
   IF(DIRECTX_INCLUDE_DIR)
     FIND_PATH(DIRECTSHOW_INCLUDE_DIR dshow.h
+      "C:/DXSDK/include"
       "C:/Program Files/Microsoft Visual Studio .NET 2003/Vc7/PlatformSDK/Include"
       "C:/Program Files/Microsoft Platform SDK/Include"
-      "C:/DXSDK/Include"
       DOC "What is the path where the file dshow.h can be found"
     )
 
     # if DirectShow include dir found, then find DirectShow libraries
     IF(DIRECTSHOW_INCLUDE_DIR)
       FIND_LIBRARY(DIRECTSHOW_strmiids_LIBRARY strmiids
+        "C:/DXSDK/lib"
         "C:/Program Files/Microsoft Visual Studio .NET 2003/Vc7/PlatformSDK/Lib"
         "C:/Program Files/Microsoft Platform SDK/Lib"
-        "C:/DXSDK/Include/Lib"
         DOC "Where can the DirectShow strmiids library be found"
       )
       FIND_LIBRARY(DIRECTSHOW_quartz_LIBRARY quartz
+        "C:/DXSDK/lib"
         "C:/Program Files/Microsoft Visual Studio .NET 2003/Vc7/PlatformSDK/Lib"
         "C:/Program Files/Microsoft Platform SDK/Lib"
-        "C:/DXSDK/Include/Lib"
         DOC "Where can the DirectShow quartz library be found"
       )
 
@@ -95,7 +95,7 @@ IF(WIN32)
   )
 
 
-ENDIF(WIN32)
+ENDIF(WIN32 AND NOT MINGW)
 
 
 #---------------------------------------------------------------------
